<!--
  Copyright 2018 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:theme="@style/ThemeOverlay.Muzei.AutoAdvance">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_advance_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_advance_description"/>

        <CheckBox
            android:id="@+id/auto_advance_wifi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingTop="16dp"
            android:text="@string/auto_advance_wifi"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_advance_interval"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"/>

        <RadioGroup
            android:id="@+id/auto_advance_interval"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/auto_advance_interval_15m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_advance_interval_15m"/>

            <RadioButton
                android:id="@+id/auto_advance_interval_30m"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_advance_interval_30m"/>

            <RadioButton
                android:id="@+id/auto_advance_interval_1h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_advance_interval_1h"/>

            <RadioButton
                android:id="@+id/auto_advance_interval_3h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_advance_interval_3h"/>

            <RadioButton
                android:id="@+id/auto_advance_interval_6h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_advance_interval_6h"/>

            <RadioButton
                android:id="@+id/auto_advance_interval_24h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_advance_interval_24h"/>

            <RadioButton
                android:id="@+id/auto_advance_interval_72h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_advance_interval_72h"/>

            <RadioButton
                android:id="@+id/auto_advance_interval_never"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/auto_advance_interval_never"/>
        </RadioGroup>

        <TextView
            android:id="@+id/auto_advance_tasker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/auto_advance_tasker"/>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
