<!--
  Copyright 2018 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<androidx.coordinatorlayout.widget.CoordinatorLayout
    android:id="@+id/browse_coordinator"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/browse_provider_background"
    android:fitsSystemWindows="true"
    android:theme="@style/ThemeOverlay.Muzei.Gesture"
    app:statusBarBackground="@color/theme_primary_dark">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/gestures_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:title="@string/gestures_title"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="false"
        android:padding="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/gestures_double_tap_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/gestures_double_tap_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintBottom_toTopOf="@+id/gestures_double_tap_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintWidth_max="500dp"/>

            <TextView
                android:id="@+id/gestures_double_tap_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/gestures_double_tap_description"
                app:layout_constraintBottom_toTopOf="@+id/gestures_double_tap_action"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gestures_double_tap_title"
                app:layout_constraintWidth_max="500dp"/>

            <RadioGroup
                android:id="@+id/gestures_double_tap_action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/gestures_three_finger_tap_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gestures_double_tap_description"
                app:layout_constraintWidth_max="500dp">

                <RadioButton
                    android:id="@+id/gestures_double_tap_temporary_disable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gestures_tap_action_temporary_disable"/>

                <RadioButton
                    android:id="@+id/gestures_double_tap_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gestures_tap_action_next"/>

                <RadioButton
                    android:id="@+id/gestures_double_tap_view_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gestures_tap_action_view_details"/>

                <RadioButton
                    android:id="@+id/gestures_double_tap_none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gestures_tap_action_none"/>

            </RadioGroup>

            <TextView
                android:id="@+id/gestures_three_finger_tap_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/gestures_three_finger_tap_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintBottom_toTopOf="@+id/gestures_three_finger_tap_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gestures_double_tap_action"
                app:layout_constraintWidth_max="500dp"/>

            <TextView
                android:id="@+id/gestures_three_finger_tap_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/gestures_three_finger_tap_description"
                app:layout_constraintBottom_toTopOf="@+id/gestures_three_finger_tap_action"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gestures_three_finger_tap_title"
                app:layout_constraintWidth_max="500dp"/>

            <RadioGroup
                android:id="@+id/gestures_three_finger_tap_action"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/gestures_three_finger_tap_description"
                app:layout_constraintWidth_max="500dp">

                <RadioButton
                    android:id="@+id/gestures_three_finger_tap_temporary_disable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gestures_tap_action_temporary_disable"/>

                <RadioButton
                    android:id="@+id/gestures_three_finger_tap_next"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gestures_tap_action_next"/>

                <RadioButton
                    android:id="@+id/gestures_three_finger_tap_view_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gestures_tap_action_view_details"/>

                <RadioButton
                    android:id="@+id/gestures_three_finger_tap_none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gestures_tap_action_none"/>

            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
