<!--
  Copyright 2018 Google Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

    <TextView
        android:id="@+id/settings_blur_amount_title"
        style="@style/Widget.Muzei.TextView.SettingsAdvancedSeekBarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/settings_blur_amount_title"
        app:layout_constraintBottom_toTopOf="@+id/settings_dim_amount_title"
        app:layout_constraintEnd_toEndOf="@+id/settings_dim_amount_title"
        app:layout_constraintTop_toTopOf="parent"/>

    <SeekBar
        android:id="@+id/blur_amount"
        style="@style/Settings.Widget.SeekBar.BlurAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="500"
        app:layout_constraintBottom_toBottomOf="@+id/settings_blur_amount_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_title_barrier"
        app:layout_constraintTop_toTopOf="@+id/settings_blur_amount_title"/>

    <TextView
        android:id="@+id/settings_dim_amount_title"
        style="@style/Widget.Muzei.TextView.SettingsAdvancedSeekBarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/settings_dim_amount_title"
        app:layout_constraintBottom_toTopOf="@+id/settings_grey_amount_title"
        app:layout_constraintEnd_toEndOf="@+id/settings_grey_amount_title"
        app:layout_constraintTop_toBottomOf="@+id/settings_blur_amount_title"/>

    <SeekBar
        android:id="@+id/dim_amount"
        style="@style/Settings.Widget.SeekBar.DimAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="255"
        app:layout_constraintBottom_toBottomOf="@+id/settings_dim_amount_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_title_barrier"
        app:layout_constraintTop_toTopOf="@+id/settings_dim_amount_title"/>

    <TextView
        android:id="@+id/settings_grey_amount_title"
        style="@style/Widget.Muzei.TextView.SettingsAdvancedSeekBarLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_grey_amount_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_dim_amount_title"/>

    <SeekBar
        android:id="@+id/grey_amount"
        style="@style/Settings.Widget.SeekBar.GreyAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="500"
        app:layout_constraintBottom_toBottomOf="@+id/settings_grey_amount_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/settings_title_barrier"
        app:layout_constraintTop_toTopOf="@+id/settings_grey_amount_title"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/settings_title_barrier"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:barrierDirection="right"
        app:constraint_referenced_ids="settings_dim_amount_title,settings_grey_amount_title,settings_blur_amount_title"/>
</androidx.constraintlayout.widget.ConstraintLayout>
